--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bluebird": "^3.5.5",
     "couchbase": "^2.6.1",
+    "jsonpath": "^1.0.2",
     "koa": "^2.6.1",
     "koa-body": "^4.0.4",
     "koa-bodyparser": "^4.2.1",
