--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "dependencies": {
     "bluebird": "^3.5.5",
     "couchbase": "^2.6.1",
-    "jsonpath": "^1.0.2",
     "koa": "^2.6.1",
     "koa-body": "^4.0.4",
     "koa-bodyparser": "^4.2.1",
     "koa-logger": "^3.2.1",
     "koa-router": "^7.4.0",
-    "koa2-cors": "2.0.6"
+    "koa2-cors": "2.0.6",
+    "merge": "^1.2.1"
   }
 }
