--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "koa-logger": "^3.2.1",
     "koa-router": "^7.4.0",
     "koa2-cors": "2.0.6",
-    "merge": "^1.2.1"
+    "merge": "^1.2.1",
+    "path": "^0.12.7"
   }
 }
